src/test/ui/error-codes/E0038.stderr
error[E0038]: the trait `Trait` cannot be made into an object
  --> $DIR/E0038.rs:15:1
   |
LL | fn call_foo(x: Box<Trait>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Trait` cannot be made into an object
   |
   = note: method `foo` references the `Self` type in its arguments or return type

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0038"
